log
Fri Apr  8 02:07:41 UTC 2022: 
 tests:  0|6
total_score: 0/70
f5cd033
Fri Apr  8 15:23:16 UTC 2022: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘createMap’:
hashmap.c:63:12: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
  for ((*i) = 0 ; (*i) < capacity ; (*i)++)
       ~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
e8b7bcd
Fri Apr  8 15:23:55 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
a3b4db8
Fri Apr  8 15:26:02 UTC 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ea68bc1
Fri Apr  8 15:59:01 UTC 2022: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  5|4
total_score: 30/70
92db5f1
Fri Apr  8 15:59:41 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
72feeeb
